[package]
name = "haversine"
version = "0.1.0"
authors = ["nreinicke <nreinicke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "haversine"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.4"
features = ["extension-module"]